# miot-skill

./: .gitignore  README.md  mcp_config.json  miot-x-mcp.service  pyproject.toml
scripts/: login.sh
skills/miot-cli/: SKILL.md
skills/miot-mcp/: SKILL.md
src/miot/: __init__.py  client.py  common.py  const.py  decoder.py  error.py  ha_api.py  i18n.py  lan.py  mcp.py  mdns.py  network.py  oauth2.py  spec.py  storage.py
src/miot/i18n/de/: mcp.yaml
src/miot/i18n/en/: mcp.yaml
src/miot/i18n/fr/: mcp.yaml
src/miot/i18n/zh-Hans/: mcp.yaml
src/miot/i18n/zh-Hant/: mcp.yaml
src/miot/res/: redirect_page.html
src/miot/specs/: bool_trans.yaml  spec_filter.yaml  spec_modify.yaml
src/miot_mcp/: __init__.py  __main__.py  config.py  proxy.py  server.py  xiaozhi.py
src/miot_skill/: __main__.py  cli.py  config.py  proxy.py
src/miot_x/: __init__.py  __main__.py
src/miot_x/lib/: proxy.py
src/miot_x/web/: app.py  oauth_callback.py
src/miot_x/web/routes/: __init__.py  auth.py  devices.py  homes.py  scenes.py
src/miot_x/web/static/: app.js  index.html
